@@ -1,7 +1,6 @@
 package dev.nez.arksurvivalreturns.gametest;
 
 import java.util.*;
-import com.mojang.serialization.JsonOps;
 import dev.nez.arksurvivalreturns.Config;
 import dev.nez.arksurvivalreturns.feature.land.*;
 import dev.nez.arksurvivalreturns.feature.creature.*;
@@ -9,108 +8,74 @@ import dev.nez.arksurvivalreturns.feature.spawn.*;
 import dev.nez.arksurvivalreturns.registry.ModContent;
 import net.minecraft.core.BlockPos;
 import net.minecraft.gametest.framework.GameTestHelper;
-import net.minecraft.util.*;
+import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.*;
 import net.minecraft.world.level.block.Blocks;
-import net.minecraft.world.level.storage.*;
 import net.minecraft.world.phys.Vec3;
 
+/** Danger-gated ground spawning and pack movement without saved habitats. */
 final class LandGameTests {
     private static void terrain(GameTestHelper h) {
-        for(int x=16;x<112;x++)for(int z=16;z<112;z++) {
-            h.setBlock(x,0,z,Blocks.STONE);h.setBlock(x,1,z,x<48?Blocks.WATER:Blocks.GRASS_BLOCK);
+        for (int x = 16; x < 112; x++) for (int z = 16; z < 112; z++) {
+            h.setBlock(x, 0, z, Blocks.STONE);
+            h.setBlock(x, 1, z, x < 48 ? Blocks.WATER : Blocks.GRASS_BLOCK);
         }
     }
     static void ecology(GameTestHelper h) {
-        terrain(h);var world=h.getLevel();var data=LandHabitatData.get(world);
-        var origin=h.absolutePos(new BlockPos(58,2,64));var water=h.absolutePos(new BlockPos(47,1,64));
-        var oldProgression=ProgressionData.get(world);boolean enabled=Config.LAND_HABITATS.get();
-        var entities=new ArrayList<CreatureEntity>();UUID habitatId=null;
+        terrain(h);
+        var world = h.getLevel();
+        var origin = h.absolutePos(new BlockPos(70, 2, 64));
+        var oldProgression = ProgressionData.get(world);
+        int chunks = world.getChunkSource().getLoadedChunksCount();
         try {
-            Config.LAND_HABITATS.set(true);
-            world.getDataStorage().set(ProgressionData.TYPE,new ProgressionData(origin.getX()-512,origin.getZ(),256,true));
-            int chunks=world.getChunkSource().getLoadedChunksCount();
-            var index=LandWaterIndex.get(world);
-            h.assertTrue(Boolean.TRUE.equals(index.observe(world,water)),"Connected surface river rejected");
-            h.assertTrue(PopulationDirector.trySpawnGroup(world,origin,Species.VELOCIRAPTOR,3,RandomSource.create(2)).isEmpty(),"Partial new raptor group accepted");
-            var group=PopulationDirector.trySpawnGroup(world,origin,Species.VELOCIRAPTOR,6,RandomSource.create(2));entities.addAll(group);
-            h.assertTrue(group.size()>=4&&group.size()<=6,"Natural river raptor group failed: "+group.size());
-            var first=group.getFirst();habitatId=first.packId();var habitat=data.byId(habitatId);
-            h.assertTrue(habitat!=null&&habitat.capacity==group.size(),"Spawn not tied to one saved habitat");
-            group.forEach(c -> c.setNoAi(true));
-            h.assertTrue(group.stream().allMatch(c -> c.packId().equals(habitat.id)),"Group identities diverged");
-            h.assertTrue(PopulationDirector.trySpawnGroup(world,origin,Species.VELOCIRAPTOR,6,RandomSource.create(4)).isEmpty(),"Occupied habitat duplicated");
-            var pig=EntityTypes.PIG.create(world,EntitySpawnReason.COMMAND);
-            LandHabitats.feed(first,pig);double fed=habitat.needs.hunger();LandHabitats.feed(group.getLast(),pig);
-            h.assertTrue(fed==.05&&habitat.needs.hunger()==fed,"Shared kill feeding multiplied or failed");
-            for(var member:group)member.wildlife().think();
-            h.assertTrue(group.stream().allMatch(c -> Math.abs(c.wildlife().mind().hunger()-habitat.needs.hunger())<1e-10),"Member satiation diverged");
-            var player=UUID.randomUUID();data.discover(habitat,player);
-            var json=LandHabitatData.CODEC.encodeStart(JsonOps.INSTANCE,data).getOrThrow();
-            var restored=LandHabitatData.CODEC.parse(JsonOps.INSTANCE,json).getOrThrow();
-            h.assertTrue(restored.byId(habitat.id).members.equals(habitat.members),"Saved occupancy lost unloaded reservations");
-            h.assertTrue(restored.discovered(player,origin,128).stream().anyMatch(a -> a.id.equals(habitat.id)),"Discovery lost on reload");
-            h.assertTrue(restored.discovered(UUID.randomUUID(),origin,128).isEmpty(),"Discovery leaked between players");
-            var out=TagValueOutput.createWithContext(ProblemReporter.DISCARDING,world.registryAccess());first.saveWithoutId(out);
-            var copy=ModContent.CREATURES.get(first.species()).get().create(world,EntitySpawnReason.COMMAND);
-            copy.load(TagValueInput.create(ProblemReporter.DISCARDING,world.registryAccess(),out.buildResult()));
-            h.assertTrue(copy.packId().equals(habitat.id)&&copy.creatureLevel()==first.creatureLevel()&&copy.getHealth()==first.getHealth(),"Entity migration changed identity/level/HP");
-            var marker=new LandHabitatPayload.Marker(habitat.id,habitat.species,habitat.center,true,true);
-            var packet=new LandHabitatPayload(world.dimension().identifier().toString(),List.of(marker,marker));
-            h.assertTrue(packet.markers().size()==1,"Duplicate map ID accepted");
-            var buf=new net.minecraft.network.RegistryFriendlyByteBuf(io.netty.buffer.Unpooled.buffer(),world.registryAccess());
-            try {
-                LandHabitatPayload.STREAM_CODEC.encode(buf,packet);h.assertTrue(packet.equals(LandHabitatPayload.STREAM_CODEC.decode(buf)),"Land payload roundtrip failed");
-                buf.clear();buf.writeUtf(packet.dimension(),256);buf.writeVarInt(129);boolean rejected=false;
-                try{LandHabitatPayload.STREAM_CODEC.decode(buf);}catch(IllegalArgumentException e){rejected=true;}
-                h.assertTrue(rejected,"Oversized land snapshot accepted");
-            }finally{buf.release();}
-            int reserved=habitat.members.size();first.remove(Entity.RemovalReason.UNLOADED_TO_CHUNK);
-            h.assertTrue(habitat.members.size()==reserved&&!habitat.loaded.containsKey(first.getUUID()),"Unload freed capacity or retained entity reference");
-            h.assertTrue(PopulationDirector.tryReplenishHabitat(world,habitat,6,RandomSource.create(3)).isEmpty(),"Unloaded member was replaced");
-            group.get(1).discard();h.assertTrue(habitat.members.size()==reserved-1,"Permanent removal did not free capacity");
-            h.assertTrue(PopulationDirector.tryReplenishHabitat(world,habitat,6,RandomSource.create(3)).isEmpty(),"Replacement ignored cooldown");
-            habitat.replacementAt=world.getGameTime();
-            var repair=PopulationDirector.tryReplenishHabitat(world,habitat,6,RandomSource.create(3));entities.addAll(repair);
-            h.assertTrue(repair.size()==1&&habitat.members.size()==reserved,"Partial herd replenishment lost occupancy: "+repair.size());
-            h.assertTrue(PopulationDirector.trySpawnGroup(world,h.absolutePos(new BlockPos(105,2,64)),Species.TRICERATOPS,4,RandomSource.create(8)).isEmpty(),"Dry land habitat escaped water exclusion");
-            var far=new BlockPos(25_000_000,100,25_000_000);
-            h.assertTrue(LandHabitats.plan(world,Species.TRICERATOPS,far)==null,"Unloaded water search produced a site");
-            h.assertTrue(index.probesThisTick()<=Config.LAND_PROBES.get(),"Water work exceeded dimension budget");
-            h.assertTrue(world.getChunkSource().getLoadedChunksCount()==chunks,"Land ecology forced chunk loads");
-            data.remove(habitat.id);h.assertTrue(data.discovered(player,origin,128).stream().noneMatch(a -> a.id.equals(habitat.id)),"Removed habitat kept marker");
-            h.succeed();
+            world.getDataStorage().set(ProgressionData.TYPE, new ProgressionData(origin.getX() - 512, origin.getZ(), 256, true));
+            h.assertTrue(SpawnRules.canSpawn(ModContent.CREATURES.get(Species.VELOCIRAPTOR).get(), world,
+                    EntitySpawnReason.NATURAL, origin, RandomSource.create(2)), "Valid forest raptor spawn rejected");
+            h.assertFalse(SpawnRules.speciesAllowed(Species.TYRANNOSAURUS, world.getBiome(origin), 1), "Apex allowed at danger 1");
+            // Snow browsing is a cold-adapted abstraction, never a warm-species one.
+            h.setBlock(64, 1, 64, Blocks.SNOW_BLOCK);
+            var browse = h.absolutePos(new BlockPos(64, 2, 64));
+            h.assertTrue(LandWildlife.forage(world, Species.MAMMOTH, browse), "Cold browser cannot use snow cover");
+            h.assertFalse(LandWildlife.forage(world, Species.PARASAUR, browse), "Warm species browsed snow");
+            h.assertTrue(Boolean.TRUE.equals(LandWildlife.coldHydration(world, h.absolutePos(new BlockPos(64, 1, 64)))),
+                    "Snow block hydration rejected");
+            h.assertTrue(LandWildlife.leash(Species.VELOCIRAPTOR) >= LandWildlife.roam(Species.VELOCIRAPTOR),
+                    "Return radius below roam radius");
+            h.assertTrue(world.getChunkSource().getLoadedChunksCount() == chunks, "Land ecology forced chunk loads");
         } finally {
-            entities.forEach(Entity::discard);if(habitatId!=null)data.remove(habitatId);
-            Config.LAND_HABITATS.set(enabled);world.getDataStorage().set(ProgressionData.TYPE,oldProgression);
+            world.getDataStorage().set(ProgressionData.TYPE, oldProgression);
         }
+        h.succeed();
     }
     static void movement(GameTestHelper h) {
-        terrain(h);var world=h.getLevel();var group=new ArrayList<CreatureEntity>();
-        var center=h.absolutePos(new BlockPos(64,2,64));var water=h.absolutePos(new BlockPos(47,1,64));
-        LandWaterIndex.get(world).request(world,center,48);
-        for(int delay: new int[]{100,200,300})h.runAfterDelay(delay,() -> LandWaterIndex.get(world).request(world,center,48));
-        UUID id=UUID.randomUUID();
-        for(int i=0;i<2;i++){
-            var mob=ModContent.CREATURES.get(Species.TRICERATOPS).get().create(world,EntitySpawnReason.COMMAND);
-            mob.setPos(Vec3.atBottomCenterOf(h.absolutePos(new BlockPos(60,2,60+i*8))));mob.setPersistenceRequired();mob.assignLandHabitat(id);
-            mob.wildlife().mind().restoreNeeds(.1,.1,.1);mob.wildlife().mind().interruptSleep(1200);world.addFreshEntity(mob);group.add(mob);
+        terrain(h);
+        var world = h.getLevel();
+        var group = new ArrayList<CreatureEntity>();
+        var center = h.absolutePos(new BlockPos(64, 2, 64));
+        var difficulty = world.getCurrentDifficultyAt(center);
+        SpawnGroupData pack = null;
+        for (int i = 0; i < 2; i++) {
+            var mob = ModContent.CREATURES.get(Species.TRICERATOPS).get().create(world, EntitySpawnReason.NATURAL);
+            pack = mob.finalizeSpawn(world, difficulty, EntitySpawnReason.NATURAL, pack);
+            mob.setPos(Vec3.atBottomCenterOf(h.absolutePos(new BlockPos(60, 2, 60 + i * 4))));
+            mob.setPersistenceRequired();
+            mob.wildlife().mind().restoreNeeds(.1, .1, .1);
+            mob.wildlife().mind().interruptSleep(1200);
+            world.addFreshEntity(mob);
+            group.add(mob);
         }
-        var habitat=LandHabitats.register(world,new LandHabitats.Site(center,water,water.east(4).above(),1),group,2);
-        habitat.destination=Vec3.atBottomCenterOf(center.east(20));habitat.heading=0;habitat.nextPlan=world.getGameTime()+500;
-        var starts=group.stream().map(Entity::position).toList();
-        h.runAfterDelay(400,() -> {
-            try {
-                for(int i=0;i<group.size();i++)h.assertTrue(group.get(i).getX()>starts.get(i).x+2,"Member did not follow shared eastward destination: "+i+" "+group.get(i).position());
-                h.assertTrue(group.stream().allMatch(c -> c.wildlife().home().equals(center)),"Moving group moved its habitat anchor");
-                h.assertTrue(group.getFirst().distanceToSqr(group.getLast())>1,"Group formation collapsed into one point");
-                h.assertTrue(!LandWaterIndex.get(world).near(world,center,48).isEmpty(),"Incremental water scanner found no river");
-                group.forEach(Entity::discard);habitat.valid=false;habitat.nextCheck=0;
-                PopulationDirector.tryReplenishHabitat(world,habitat,4,RandomSource.create(1));
-                h.assertTrue(habitat.valid&&habitat.members.isEmpty(),"Vacant habitat did not recover water validity or bypassed cooldown");
-                h.succeed();
-            }finally{group.forEach(Entity::discard);LandHabitatData.get(world).remove(habitat.id);}
-        });
+        h.assertTrue(group.get(0).packId().equals(group.get(1).packId()), "Vanilla spawn cluster split the pack");
+        // A displaced member keeps the saved home and turns back instead of following the leader.
+        var stray = group.getLast();
+        var own = stray.wildlife().home();
+        stray.setPos(Vec3.atBottomCenterOf(own).add(200, 0, 0));
+        for (int i = 0; i < 3; i++) stray.wildlife().think();
+        h.assertTrue(stray.behavior() == dev.nez.arksurvivalreturns.feature.behavior.BehaviorState.RETURN_HOME,
+                "Displaced pack member did not return home: " + stray.behavior());
+        h.assertTrue(LandWildlife.distanceSqr(group.getFirst().wildlife().home(), stray.wildlife().home()) < 100,
+                "Pack members lost their shared home area");
+        group.forEach(Entity::discard);
+        h.succeed();
     }
     private LandGameTests() {}
 }
